MDEV-4005 fix.

Field matching fixed.
DBUG_ASSERT fixed.